<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:backgroundTint="@color/white"
    android:orientation="vertical"
    android:padding="@dimen/padding_of_all_items">

    <FrameLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/panel_header">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="start"
            android:orientation="horizontal">

            <Button
                android:id="@+id/back_button"
                android:layout_width="@dimen/button_size"
                android:layout_height="match_parent"
                android:backgroundTint="@color/white"
                android:gravity="center"
                app:icon="@drawable/arrow_back"
                app:iconTint="@color/black1" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/text_start"
                android:text="@string/settings"
                android:textColor="@color/black1"
                android:textSize="@dimen/text_of_button"
                android:textStyle="bold" />

        </LinearLayout>

        <Button
            android:layout_width="@dimen/button_size"
            android:layout_height="match_parent"
            android:layout_gravity="end"
            android:visibility="invisible" />
    </FrameLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/high_of_sup_menu"
        android:layout_marginTop="@dimen/top_step"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/black_them"
            android:textColor="@color/black1"
            android:textSize="@dimen/size_menu_text" />

        <Switch
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/wright_padding_icons" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/high_of_sup_menu"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/share_app"
            android:textColor="@color/black1"
            android:textSize="@dimen/size_menu_text" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/wright_padding_icons"
            android:src="@drawable/share" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/high_of_sup_menu"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/write_to_sup"
            android:textColor="@color/black1"
            android:textSize="@dimen/size_menu_text" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/wright_padding_icons"
            android:src="@drawable/support" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="@dimen/high_of_sup_menu"
        android:orientation="horizontal">

        <TextView
            android:layout_width="@dimen/zero"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:text="@string/terms_of_use"
            android:textColor="@color/black1"
            android:textSize="@dimen/size_menu_text" />

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginEnd="@dimen/wright_padding_icons"
            android:src="@drawable/arrow_forward" />

    </LinearLayout>

</LinearLayout>